--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ body {
 #txt{
    color: rgb(87, 59, 59) !important;
    margin: 0;
+   font-family: coiny;
 
 }
 
@@ -65,38 +66,71 @@ body {
   
 }
 
-i, i:hover{
-
-   color: white;
-}
+.algo{
+   margin-top: 100px;
+   padding: 0px;
+   }
+   
 
 .algo > p{
-   color: black;
-   display: flex;
+  color: black;
   text-align: center;
+  font-family: coiny;
 }
 
- div > .algo{
-   margin-top: 15vh;
-   padding-left: 50vh;
+
+
+ a i:hover{
+   color:#d28296 !important;
 }
 
+img{
+   align-items: center;
+   padding-left: 350px;
+   height: 100%;
+   width: 70%;
+}
 
 
 
 
 @media (min-width: 768px) and (max-width: 991px){
 
-   .carousel-item{
-      margin-top: 20%;
-      width: auto;
-  }
-  
+   .algo{
+      margin-top: 100px;
+      padding: 0px;
+      }
+      
 
-.img-fluid{
-   height: auto;
-    max-width: 60%;
- }
+.algo > p{
+color: black;
+text-align: center;
+font-family: coiny;
+
+}
+
+
+a i:hover{
+   color:#d28296 !important;
+}
+
+
+.carousel-item img{
+   padding-right: 25%;
+   padding-bottom: 100px;
+   width: 100%;
+   height: 100%;
+   
+   
+}
+
+.carousel-item{
+      margin-top: 20%;
+      width: 100%;
+      height: 100%;
+
+}
+
 .nav-link{
    color:#262626;
 }
@@ -107,27 +141,38 @@ i, i:hover{
 
  }
 
- 
 
+ @media(max-width: 767px ){ 
 
-   @media(max-width: 767px ){
+.algo > p{
+color: black;
+text-align: center;
+font-family: coiny;
+}
 
-      .navbar-nav{
-         background-color: #fff;
-     }
-      
+.algo{
+padding: 0px;
+margin-top: 100px;
+}
 
+img{
+padding-left: 100px;
+}
 
-  .img-fluid{
-   height: auto;
-    max-width: 50%;
-
- }
+.navbar-nav{
+background-color: #fff;
+}
  
  .carousel-item{
    margin-top: 20%;
-   width: auto;
+   width: 85%;
+   height: 85%;
 }
+
+a i:hover{
+   color:#d28296 !important;
+}
+
 
 
  }
